--- a/testing.properties
+++ b/testing.properties
@@ -1,3 +1,4 @@
 testing with properties file
 adding a new line to the testing config file
 updating file from the central
+another update from the central
