--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,2 @@
-welcome.message=Hello Cong Huynh from Spring Cloud at git
-any.message=Hello somesome at git
+welcome.message=Hello Cong Huynh from Spring Cloud at git CENTRAL
+any.message=Hello somesome at git CENTRAL
