--- a/myconfig.properties
+++ b/myconfig.properties
@@ -1,1 +1,2 @@
 welcome.message=Hello Cong Huynh from Spring Cloud at git CENTRAL / MYCONFIG
+preparation.message=We are preparing the stuff for the app
