--- a/eureka.properties
+++ b/eureka.properties
@@ -1,15 +1,14 @@
+spring.profiles.active=development
+---
+
+spring.profiles=development  
 security.user.name=eureka
 security.user.password=eureka
-
 server.port=8761
+endpoints.restart.enabled=true
+endpoints.shutdown.enabled=true
+endpoints.health.sensitive=false
 eureka.instance.hostname=eureka
-
 eureka.client.serviceUrl.defaultZone=http://eureka:eureka@eureka-backup:8762/eureka/
-
 eureka.server.enableSelfPreservation=false
-
-
-spring.rabbitmq.host=rabbit
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=user
-spring.rabbitmq.password=secret
+spring.cloud.config.discovery.enabled=true
