--- a/eureka-backup.properties
+++ b/eureka-backup.properties
@@ -1,14 +1,14 @@
+spring.profiles.active=development
+---
+
+spring.profiles=development  
 security.user.name=eureka
 security.user.password=eureka
-
 server.port=8762
-eureka.server.enableSelfPreservation=false
-
+endpoints.restart.enabled=true
+endpoints.shutdown.enabled=true
+endpoints.health.sensitive=false
 eureka.instance.hostname=eureka-backup
-
 eureka.client.serviceUrl.defaultZone=http://eureka:eureka@eureka:8761/eureka/
-
-spring.rabbitmq.host=rabbit
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=user
-spring.rabbitmq.password=secret
+eureka.server.enableSelfPreservation=false
+spring.cloud.config.discovery.enabled=true
