--- a/config-service.yml
+++ b/config-service.yml
@@ -7,9 +7,15 @@ endpoints:
     enabled: true
   health:
     sensitive: false
+spring:
+  cloud:
+    inetutils:
+      preferredNetworks:
+        - 192.168
+        - 10.0
 eureka:
   instance:
-    hostname: config-service
+    preferIpAddress: true
   client:
     registerWithEureka: true
     fetchRegistry: true
