--- a/feign-clients.yml
+++ b/feign-clients.yml
@@ -1,11 +1,17 @@
 api:
    test:
       response: This is the value at git repo centralconfrepo USING-FEIGN4.7
+spring:
+  cloud:
+    inetutils:
+      preferredNetworks:
+        - 192.168
+        - 10.0
 eureka:
+  instance:
+    preferIpAddress: true
   client:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
        defaultZone: http://eureka:eureka@eureka:8761/eureka/,http://eureka:eureka@eureka-backup:8762/eureka/
-  instance:
-    preferIpAddress: true
