--- a/feign-clients.yml
+++ b/feign-clients.yml
@@ -1,6 +1,6 @@
 api:
    test:
-      response: This is the value at git repo centralconfrepo USING-FEIGN4.8
+      response: This is the value at git repo centralconfrepo USING-FEIGN4.9
 spring:
   cloud:
     inetutils:
@@ -15,3 +15,6 @@ eureka:
     fetchRegistry: true
     serviceUrl:
        defaultZone: http://eureka:eureka@eureka:8761/eureka/,http://eureka:eureka@eureka-backup:8762/eureka/
+ribbon:
+  eureka:
+    enabled: true
