--- a/feign-clients.yml
+++ b/feign-clients.yml
@@ -1,6 +1,6 @@
 api:
    test:
-      response: This is the value at git repo centralconfrepo USING-FEIGN4.9
+      response: This is the value at git repo centralconfrepo USING-FEIGN4.10
 spring:
   cloud:
     inetutils:
@@ -10,6 +10,8 @@ spring:
 eureka:
   instance:
     preferIpAddress: true
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 2
   client:
     registerWithEureka: true
     fetchRegistry: true
