--- a/employee-search-service.yml
+++ b/employee-search-service.yml
@@ -7,8 +7,13 @@ spring:
 eureka:
   instance:
     preferIpAddress: true
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 2
   client:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
        defaultZone: http://eureka:eureka@eureka:8761/eureka/,http://eureka:eureka@eureka-backup:8762/eureka/
+ribbon:
+  eureka:
+    enabled: true
