--- a/client.yml
+++ b/client.yml
@@ -12,8 +12,7 @@ eureka:
     preferIpAddress: true
     leaseRenewalIntervalInSeconds: 1
     leaseExpirationDurationInSeconds: 2
-    metadataMap:
-       instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}:${random.value}}    
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}:${random.value}}
   client:
     registerWithEureka: true
     fetchRegistry: true
