--- a/feign-clients.yml
+++ b/feign-clients.yml
@@ -9,11 +9,10 @@ spring:
         - 10.0
 eureka:
   instance:
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}:${random.value}}  
     preferIpAddress: true
     leaseRenewalIntervalInSeconds: 1
     leaseExpirationDurationInSeconds: 2
-    metadataMap:
-       instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}:${random.value}}
   client:
     registerWithEureka: true
     fetchRegistry: true
