--- a/eureka.properties
+++ b/eureka.properties
@@ -7,4 +7,4 @@ endpoints.health.sensitive=false
 eureka.instance.hostname=eureka
 eureka.client.serviceUrl.defaultZone=http://eureka:eureka@eureka-backup:8762/eureka/
 eureka.server.enableSelfPreservation=false
-spring.cloud.config.discovery.enabled=true
+#spring.cloud.config.discovery.enabled=true
