--- a/eureka-backup.properties
+++ b/eureka-backup.properties
@@ -7,4 +7,4 @@ endpoints.health.sensitive=false
 eureka.instance.hostname=eureka-backup
 eureka.client.serviceUrl.defaultZone=http://eureka:eureka@eureka:8761/eureka/
 eureka.server.enableSelfPreservation=false
-spring.cloud.config.discovery.enabled=true
+#spring.cloud.config.discovery.enabled=true
