--- a/employee-search-service.yml
+++ b/employee-search-service.yml
@@ -1,6 +1,9 @@
 spring:
   cloud:
     inetutils:
+      ignoredInterfaces:
+        - docker0
+        - veth.*
       preferredNetworks:
         - 192.168
         - 10.0
