--- a/eureka-backup.properties
+++ b/eureka-backup.properties
@@ -1,10 +1,10 @@
 security.user.name=eureka
 security.user.password=eureka
 server.port=8762
-endpoints.restart.enabled=true
-endpoints.shutdown.enabled=true
-endpoints.health.sensitive=false
+#endpoints.restart.enabled=true
+#endpoints.shutdown.enabled=true
+#endpoints.health.sensitive=false
 eureka.instance.hostname=eureka-backup
 eureka.client.serviceUrl.defaultZone=http://eureka:eureka@eureka:8761/eureka/
 eureka.server.enableSelfPreservation=false
-#spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.enabled=true
