--- a/eureka.properties
+++ b/eureka.properties
@@ -7,4 +7,5 @@ server.port=8761
 eureka.instance.hostname=eureka
 eureka.client.serviceUrl.defaultZone=http://eureka:eureka@eureka-backup:8762/eureka/
 eureka.server.enableSelfPreservation=false
+eureka.server.responseCacheUpdateIntervalMs=3000
 spring.cloud.config.discovery.enabled=true
