--- a/eureka-backup.properties
+++ b/eureka-backup.properties
@@ -7,4 +7,5 @@ server.port=8762
 eureka.instance.hostname=eureka-backup
 eureka.client.serviceUrl.defaultZone=http://eureka:eureka@eureka:8761/eureka/
 eureka.server.enableSelfPreservation=false
+eureka.server.responseCacheUpdateIntervalMs=3000
 spring.cloud.config.discovery.enabled=true
