--- a/employee-search-service.yml
+++ b/employee-search-service.yml
@@ -18,6 +18,8 @@ eureka:
   client:
     registerWithEureka: true
     fetchRegistry: true
+    registryFetchIntervalSeconds: 3
+    shouldDisableDelta: true
     serviceUrl:
        defaultZone: http://eureka:eureka@eureka:8761/eureka/,http://eureka:eureka@eureka-backup:8762/eureka/
 ribbon:
