--- a/consul-service.yml
+++ b/consul-service.yml
@@ -1,7 +1,7 @@
-#spring:
-#  cloud:
-#    consul:
-#      host: 192.168.99.100
-#      port: 8500
-#      discovery:
-#        instanceId: ${spring.application.name}:${random.value}
+spring:
+  cloud:
+    consul:
+      host: 192.168.99.100
+      port: 8500
+      discovery:
+        instanceId: ${spring.application.name}:${random.value}
