--- a/account-service.yml
+++ b/account-service.yml
@@ -5,3 +5,7 @@ spring:
     level:
       org.springframework: WARN
       org.hibernate: WARN
+  sleuth:
+    log:
+      json:
+        enabled: true
